--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "react-native-gesture-handler": "^2.24.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pager-view": "^6.7.0",
+    "react-native-picker": "^4.3.7",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
